--- a/OEBPS/Text/index_split_000.html
+++ b/OEBPS/Text/index_split_000.html
@@ -22,6 +22,6 @@
 <p class="mp_main">︽梅拳秘譜︾雖系民間手抄本拳書，卻是本才華橫溢的佳作，不但其文字精美，可順口成章，且寓意深遠意味無窮，足見作者不但武功高超，也精通梅花樁文理。否則，不可能有此過人的才智和坦蕩的胸懷。︽梅拳秘譜︾雖以氣論為主導思想，但在其主要篇章中，如︽渾元論︾、︽聚氣論︾、︽聚精會神氣力淵源論︾等及其他篇章的某些論點中，其理論的深度早巳超出了以太極學說為基礎的氣論水平，成了今天指導練功者使拳法進入神化之境的理論基礎。</p>
 <p class="mp_main">在︽梅拳秘譜︾的︽收肉變色論︾一文中說：﹁ 收肉原本作咽肉，近日問之同鄉，皆雲萇先生吸氣則頃刻大瘦，故曰咽肉也。﹂ 可以知此秘譜是清乾隆年間，與當時著名武術家萇乃周同鄉之人所作。據近代曆史學家考證，清乾隆年間梅花樁已傳至第五至八代，其弟子及影響已遍布河北、山東、河南一帶的廣大農村。因此萇乃周之萇家拳也是梅花樁武場中之一支，因其沒有文場共存，而漸不知梅拳之事。梅花拳在清代一直是被封建統治者鎮壓的，因此該派拳術也一直是在民間秘密流傳的，這也是梅拳的理論一直不能與世人見面的重要原因。</p>
 <p class="mp_main">︽梅花拳秘譜︾是梅花樁武功的重要文獻，我們正在學習它、研究它，望梅花拳弟子們對前輩師爺們留下的這一寶貴財富盡力珍惜、愛護。</p>
-<p id="calibre_pb_0" class="mp_end">&#160;</p>
+<p id="calibre_pb_0" class="mp_end"></p>
 </body>
 </html>
