--- a/OEBPS/Text/index_split_002.html
+++ b/OEBPS/Text/index_split_002.html
@@ -22,6 +22,6 @@
 <p class="mp_main">梅花樁覽野史閱者可以見之，此為本門獨有之特長，他拳之所無，可交手於樁上，遇敵可操必勝之券。而成拳為學者必由之路，初步有一定之手，如拳架焉，擰拳則無定手矣，亦可謂見勁使勁、引進落空，一力降於十會，一巧破千斤，整學亂用，見空按豆無空手矣。但練習者須經三易寒暑，方可力順氣遍周身，動中求靜，靜中求動，此身化之謂也。待氣隨意發，力隨氣使，則氣化之功又達矣。再練而致神化，神色可以傷人，此達深奧境也。苟吾人盡心學之，雖不能達其巔，亦可以健身自衛矣。簡之，意深筆略，至三節九段內外三合等等，會者皆聞及，學拳之方法規矩海內皆知，筆者均略之。</p>
 <p class="mp_separator"></p>
 <p class="mp_comment">︻評注：︽梅拳概論︾一文已將練法、用法及本門拳法構造之特點等融為一體，讀後可基本了解梅拳之概貌。由此文我們可以看出，梅花樁以技擊為主要內容的用法，是寓於練法之中的。架子，是該派武功的基本練法，它有四門、五勢，樁步與行步之分，有動有靜，變化多端，絕手亂拳皆包含於其中。八方為練步的基礎，四門、八方又把拳法和陣法的訓練統一起來。︼</p>
-<p id="calibre_pb_2" class="mp_end">&#160;</p>
+<p id="calibre_pb_2" class="mp_end"></p>
 </body>
 </html>
