--- a/OEBPS/Text/index_split_004.html
+++ b/OEBPS/Text/index_split_004.html
@@ -13,9 +13,9 @@
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_5">聚氣論</h1>
 <p class="mp_comment">︻本論講練功過程中聚氣的方法，練功包括架子、成拳、器械等練法。︼</p>
 <p class="mp_main">勢崢嶸氣泓濃，團團聚聚在中宮，隱而不發節節靈。忽然，神以役氣，氣以役形，霹靂交心火動，上下左右遍體行。</p>
-<p class="mp_separator">&#160;</p>
+<p class="mp_separator"></p>
 <p class="mp_comment">︻評注：文中之﹁ 勢崢嶸，氣泓濃﹂ 是指練功或技擊時出現的內外合一、精氣神一體的形態，即已達渾元一氣的真形，這是練功者所追求的目標。﹁ 團團聚聚在中宮，隱而不發節節靈﹂ 兩句話是互為因果的，對於武功已達神化階段的練功者，已養成內丹，中氣飽滿，他無論行動坐臥，練功或技擊時，內氣都能﹁ 團團聚聚在中宮﹂ ．已成自然之態。在練功或技擊時無論是出手上步，一勢一動都無欲無求、也無任何意念的活動，動作輕靈流暢。當然也就﹁ 隱而不發節節靈﹂ 了；另一方面，練功之人要無思無為，抑制一切意念活動，這就是﹁ 隱而不發﹂ 之意，同時在運動中要模仿兒童或動物在無意識活動時那種無拘無束、無阻無礙、滑快流暢、輕松自然的形態，努力作到﹁ 節節靈﹂ 。︽易經·系辭︾說：﹁ 天下何思何慮。﹂ 因為宇宙沒有任何思慮，所以日往月來，寒暑相推，恒久而流暢地運動著。上述練功的要求，就是通過以武治心使心性寂然，才能百脈流通，內氣自然匯聚丹田而﹁ 團團聚聚在中宮﹂ 。此即梅花樁武功自然聚氣之理，它與用﹁ 意守﹂ 或﹁ 意念導引﹂ 等方法的聚氣完全不同。</p>
 <p class="mp_comment">本文的﹁ 忽然﹂ 二字至關重要，它是形容靈感激發的一刹那。在這短促的瞬間，靈感是攸忽而至的，不是人的意志所能幹預的。神，即靈感，是武功的原動力。﹁ 神以役氣，氣以役形﹂ ，就是形容運動的機制。一動之後，﹁ 上下左右遍體行﹂ ，氣血周身流暢，作周天運行。一動則全身俱動，內外合一，精氣神一體，這和以意志為原動力的運動方式完全不同。意念指揮下的運動多是局部的，很難達到全身的協調統一、內外一致。特別是在技擊的瞬間，只要有一點意念的滲入，就要破壞運動的諧和、圓融和整體性。︼</p>
-<p id="calibre_pb_4" class="mp_end">&#160;</p>
+<p id="calibre_pb_4" class="mp_end"></p>
 </body>
 </html>
