--- a/OEBPS/Text/index_split_006.html
+++ b/OEBPS/Text/index_split_006.html
@@ -46,8 +46,8 @@
 <p class="mp_main">此醉形勢也。醉行者忽前忽後、忽仰忽俯、忽進忽退、忽斜忽正，勢無定形，氣亦隨之亂為入扶也。但亂之中隨勢而布，陰陽不相悖謬，亂而卻不可亂也。</p>
 <p class="mp_main">以上總論一身之大陰陽，其入扶如此。至於手背為陽，膊外為陽，三陽經行於手膊之外也。﹁ 手太陽經起於手小指背，手少陽經起於無名指背，手陽明經起於食指之背，皆上行循膊外而走也。﹂ 手心為陰，膊內為陰，三陰經行於手膊之內也。﹁ 手太陰經止於大指內側，手厥陰經止於中指內面，手少陰經止於小指內面，皆行膊內止於指也。﹂ 足背為陽，腿外為陽，三陽經行於足腿之外也，﹁ 足太陽經止於足小指內之次指背，足少陽經止於足大指內之次指背，足陽明經止於足大指內之次指背，三經皆循腿外而止於指背。﹂ 足心為陰，腿內為陰，三陰經行於足腿之內也。﹁ 足太陰經起於足大指內側下，足厥陰經起於足大指內側上，足少陰經起於足小指過足心湧泉穴，三經皆循腿內也。﹂ 其手足尖之伸翹顛踏，膝胯之屈伸提落，雖用法無窮，而陰陽入扶自有一定，形合則氣不牽扯，形不合則氣必濡滯，逐處體驗無遺纖細為妙。</p>
 <p class="mp_main">以上陰陽入扶各論，斜正仰俯左右旋轉諸說，此即形氣合一，一身之勢法也。所謂渾元一氣是也，此即五勢梅花樁行功之勢法也。前進後退，左旋右轉，一身之法俱以五勢為主。五勢者，大勢、順勢、拗勢、小勢、敗勢是也。正勢大勢也，直出者順勢也，十字勢為拗勢也。曲丁腿勢為小勢，斜側勢為敗勢也。此即五勢梅花拳是也，又為五勢梅花樁，在樁上為梅花樁，在地上為落地梅花也。</p>
-<p class="mp_separator">&#160;</p>
+<p class="mp_separator"></p>
 <p class="mp_comment">︻評注：以上各篇入扶之說，都是從入氣的角度指導練功的文章。八方群步忽左忽右，忽前忽後，忽仰忽俯，忽進忽退，忽斜忽正，勢無定形，腳無定步。佛教禪宗修持的方法就是：﹁ 一切佛法總不用學，唯學無求無著。無求即心不生，無著即心不滅，不生不滅即是佛。﹂ 他們還認為：﹁ 恰恰無心用，恰恰用功時也，蓋有功可用則縛於功，無功之功乃為無縛之真用功。﹂ 所以禪宗論修悟之道，亦常自立自破。佛法與道法相同，老子的﹁ 道無形﹂ 之理亦是如此。梅花樁拳法的練功之道也是自立自破的，因為凡是練功的方法，到了一定的階段後就成了練功者的束縛，必須打破該功法、套路的框框。只有這樣練功者才能無拘無束、無阻無礙，且有靈巧應變之能力。因此，梅花樁拳法亦是有套路而無套路，亂而卻不可亂的，只要﹁ 氣亦隨之亂為入扶﹂ 及﹁ 陰陽不相悖謬﹂ 即可。練功者只要做到﹁ 形氣合一﹂ ，不必拘泥於死板的套路和招勢，這就是真正的拳法。︼</p>
-<p id="calibre_pb_6" class="mp_end">&#160;</p>
+<p id="calibre_pb_6" class="mp_end"></p>
 </body>
 </html>
