--- a/OEBPS/Text/index_split_010.html
+++ b/OEBPS/Text/index_split_010.html
@@ -12,6 +12,6 @@
   <body class="mp_body">
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_18">論拳</h1>
 <p class="mp_main">拳者屈卷而不伸，握固其指團聚其氣也。其攥法以大指尖掐對食指第二節橫紋，四指卷緊握固，一齊著力，務使分之不開、擊之不散方為合竅。此乃土貫四德五行團聚之法也。其用法也有四正四隅合之中宮九法，其氣亦滿撲，落點有一定之處，隨勢體驗，不可混施。如平陰拳下栽者，中指二節領氣，平陽拳上沖者，中指根節領氣，側拳上挑者，大指二節領氣，側拳下劈者小指根節領氣，不拘側平，直撞擊者，小指根節二節中間平面領氣。明乎此，餘可類推矣。</p>
-<p id="calibre_pb_10" class="mp_end">&#160;</p>
+<p id="calibre_pb_10" class="mp_end"></p>
 </body>
 </html>
