--- a/OEBPS/Text/index_split_018.html
+++ b/OEBPS/Text/index_split_018.html
@@ -12,6 +12,6 @@
   <body class="mp_body">
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_25">六合說</h1>
 <p class="mp_main">何為六合?人之一身分為內三合外三合。內三合者，心與意合，意與氣合，氣與力合。外三合者，肩與胯合，肘與膝合，手與足合。是為六合。所謂內三合要動，外三合必隨，心一動全體俱動，稍有一處不合，發手必不勇猛，落點必不堅剛，欲求疾快猛，必不能也。在練習時起身落點要整，自然能進能退，動如風吹不停，行如流星趕月，自然能達到上乘矣。</p>
-<p id="calibre_pb_18" class="mp_end">&#160;</p>
+<p id="calibre_pb_18" class="mp_end"></p>
 </body>
 </html>
