--- a/OEBPS/Text/index_split_020.html
+++ b/OEBPS/Text/index_split_020.html
@@ -12,8 +12,8 @@
   <body class="mp_body">
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_27">剛柔相濟論</h1>
 <p class="mp_main">勢無三點不落，氣無二盡不盡，此陰轉陰中間一陽，陽轉陽中間一陰之謂也。蓋落點處是氣聚血凝止歸之所，宜用剛法。而間陰間陽是氣血流行，宜用柔法。不達乎此，純用剛法，則氣不撲滿，牽扯不利，落點必不勇猛；純用柔法，則氣不聚，無有歸著，落點亦不堅硬。應剛而柔，則聚而不聚，應柔而剛，則散而不散，皆不得相濟之妙。故善用剛者如蜻蜓點水，一落即起，過氣如風輪旋轉，滾走不停，必如是則剛柔得宜，方能無氣歉不實、澀滯不利之患。</p>
-<p class="mp_separator">&#160;</p>
+<p class="mp_separator"></p>
 <p class="mp_comment">︻評注：此論中剛為陽、柔為陰，剛柔相濟方得天然之妙，因剛柔相濟者即陰陽均勻、無過不及，不偏不倚，為一暫時平衡的太極狀態。只有在此時拳法包含著無窮變化和無限的生機。陰陽不測之謂神，只有陰陽均勻時才變化莫測，拳法也才入﹁ 神化﹂ 之境。梅花樁練功者百脈流通、氣血暢行而連綿不斷，此也謂之氣散，動作亦流利柔順，過氣如風輪旋轉滾走不停。一旦落點全身之氣盡集一處為氣之所注，勇猛堅剛謂之氣聚，但此舉只在瞬間，如蜻蜒點水一落即起，絕對不能遲滯落久，否則氣斷僵硬矣。因此，氣散在動作時須連綿不斷，氣聚在落點的刹那，一落即起方為剛柔相濟。動時氣當散不散必澀滯不利，落點氣當聚不聚必氣歉不實，此皆為練功和枝擊之大忌。氣聚氣散須練之於平時而使其成為自然，用時方能得心應手，得剛柔相濟之妙。︼</p>
-<p id="calibre_pb_20" class="mp_end">&#160;</p>
+<p id="calibre_pb_20" class="mp_end"></p>
 </body>
 </html>
