--- a/OEBPS/Text/index_split_023.html
+++ b/OEBPS/Text/index_split_023.html
@@ -13,8 +13,8 @@
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_30">三尖照論</h1>
 <p class="mp_main">練形不外動靜，動貴氣擎不散，靜如山嶽難搖，方能來去無失著。每見俗學動靜俱不穩妥，蓋未究三尖之照與不照也。</p>
 <p class="mp_main">三尖照，則無東斜西歪之患，三尖不照，則此牽彼扯必有搖晃之失。如十字勢左腳前右手前者，右手正照左腳尖，頭照右手，則上中下一線，不歪不斜必穩。側身右腳前，右手前順勢者，頭照右手，右手照右腳必穩。餘仿此。</p>
-<p class="mp_separator">&#160;</p>
+<p class="mp_separator"></p>
 <p class="mp_comment">︻評注：動之氣擎不散，靜如山嶽難搖，方有動靜互根之效，此即由外丹煉內丹之方法。但如要氣擎不散，必須百脈暢流，道路滑利，行氣如風輪旋轉，滾走不停，就必須動作准確，落點清楚；若要靜之如山嶽無搖晃之憂，必須注意姿勢正確，因此三尖相照就是練功時的一個重要原則。︼</p>
-<p id="calibre_pb_23" class="mp_end">&#160;</p>
+<p id="calibre_pb_23" class="mp_end"></p>
 </body>
 </html>
