--- a/OEBPS/Text/index_split_026.html
+++ b/OEBPS/Text/index_split_026.html
@@ -13,6 +13,6 @@
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_33">收肉變色論</h1>
 <p class="mp_main">收肉原本作咽肉。近日問之同鄉，皆雲萇先生吸氣則頃刻大瘦，故曰咽肉也。</p>
 <p class="mp_main">此練氣練到成處，真元充足，由內達外氣聚血凝結成一塊之候也。人之生也，稟天雖一，得氣則殊。以五行有五性五色之不同也!故秉木氣而生者，其形秀而長，其性多怒其色青；秉火氣而生者，其形短而厚，其性多鬱其色黃；稟金氣而生者，其形白而美，其性多悲；秉水氣而生者，其形肥而潤其色黑，其性多恐。練氣練到盡處，無以複加，則功成圓滿，乃由肌膚隨氣收貼於骨，五形真氣俱現於外，各隨氣所秉以呈，乃有青黑赤白黃五樣顏色。其有一人而五色兼見者，此五氣兼秉而色故雜見也；有遍體如冰者，此真陽收聚中宮不外達也。明乎此則知肉之收也，隨氣而來面色變也，隨氣而化，出於天然，無幻術也。</p>
-<p id="calibre_pb_26" class="mp_end">&#160;</p>
+<p id="calibre_pb_26" class="mp_end"></p>
 </body>
 </html>
