--- a/OEBPS/Text/index_split_032.html
+++ b/OEBPS/Text/index_split_032.html
@@ -13,11 +13,11 @@
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_39">八方論</h1>
 <p class="mp_main">何為八方?八方為散手之母，又名群步，有大八方、中八方、小八方之別。看敵從何來，以何方應之。小八方落三點，中八方落五點，大八方為亂點。步隨身換，腳隨手出，非學不悟此為交手之活步，為梅花拳之特長。所謂上步須要先上身，腳手齊到才為真。陰出陽入，陽出陰入，總攬四面，支撐八方。所謂八方是也。</p>
 <p class="mp_main">五勢梅花拳之練法，分樁步與行步。樁步以五勢為本，行步以三法為宗。五勢者：大勢、順勢、拗勢、小勢、敗勢。三法者：擺法、撤法、紮法。五勢者，金木水火土五行也。大勢屬金，金能生水，所以能變順勢；順勢屬水，水能生木，所以能變拗勢；拗勢屬木，木能生火，所以能變小勢；小勢屬火，火能生土，所以能變敗勢；敗勢屬土，土能生金，所以又能變大勢矣。五行相生者順，相克者逆。擺法為行步之首，忽左忽右，忽進忽退，行東就西，忽上就下，妙在活步。撤法為抽撤之迅。紮法求進攻之疾。初步學習務必求真為要。</p>
-<p class="mp_separator">&#160;</p>
+<p class="mp_separator"></p>
 <p class="mp_comment">︻評注：八方之要點是步隨身換，腳隨手出，即上步須要先上身，腳手齊到才為真，這是全身協調成一整勁的關鍵。小八方、中八方尚有一定之步點，它們主要用以練功，至大八方已無拘無束，隨意變化，因而常用以技擊。</p>
 <p class="mp_comment">梅花樁之樁步五勢，為諸拳勢的5 個基本要素，它們的特長是可以變化，其變化之規律要與五行的相生相克之理相合。</p>
 <p class="mp_comment">行步三法為諸般行步之基礎，其中擺法最為難練，為行步之首，忽東忽西，忽進忽退，活步之妙，常出乎敵人意料，使敵處處受阻，走投無路；撤法在於抽撤之快，紮法為長驅直入，它們都可進可退，可長可短，迂回包抄。埋伏截擊皆在其中。</p>
 <p class="mp_comment">梅花樁步法之用最為靈活，其練法亦無窮盡。︼</p>
-<p id="calibre_pb_32" class="mp_end">&#160;</p>
+<p id="calibre_pb_32" class="mp_end"></p>
 </body>
 </html>
