--- a/OEBPS/Text/index_split_035.html
+++ b/OEBPS/Text/index_split_035.html
@@ -41,10 +41,10 @@
 <p class="mp_poetry_line">敗勢伸開回頭看，左劈右扣隨時變。</p>
 <p class="mp_poetry_line">前後左右撐撥腿，前豁後跳上下翻。</p>
 <p class="mp_poetry_line">腳打七分手打三，千變萬化快為先。</p>
-<p class="mp_separator">&#160;</p>
+<p class="mp_separator"></p>
 <p class="mp_comment">︻評注：從本文可以看出，五勢之變化只要符合陰陽轉結之理，就無拘無束，無窮無盡。在技擊中，大勢可看作是一腳實、一腳半虛半實的預備姿勢，這時主要是察敵人之來勢，審敵人之短長，因敵人之動而動，見手使手，借勁使勁。梅花樁技擊只有出手引手，見手使手，沒有自己先出手擊敵的。彼不動己不動、彼微動己先動是梅花樁技擊的原則。後發先至，後發制人是梅花樁技擊的特點。順勢是順身順步，兩腳俱實的擊敵之勢，它的變化很靈活，能四面出手上步，不單只攻一路。拗勢之特點是拗步斜身，能橫走豎撞，出手迅速而又威力強大，各種腿法也使用方便，任意變化，故有梅花樁得意手之稱。小勢為一腳虛一腳實之擊敵姿勢，多在小踢小打、小捉小拿時用之，它變化迅速，出腿方便，如猿猴一樣靈活。敗勢為梅花樁特有之拳勢，世間只有梅花拳敢於言敗，且專設一勢稱為敗勢，其意深遠。觀敗勢之形態有抽撤、閃化之象。梅花樁的技擊原則認為﹁ 抽撤即攻，閃化即打﹂ 。而事實也確如此。梅花樁之練功於平凡中見偉大，在其技擊中又能敗中取勝，出敵意料。要注意此敗中取勝絕不是詐敗佯輸的誘敵之法，因此並沒有任何主觀意念挑選，交手之時並沒有設什麼圈套，考慮什麼計謀，而是真敗，但此敗卻成了啟動靈感的信息，故轉敗為勝是因勢利導、順理成章、自然而然之結局，這也正是梅花樁武功的精深博奧的特點之一。梅花樁武功可使敵慘敗於他最得意的一刹那間，這就是敗勢之能為。</p>
 <p class="mp_comment">五勢之變化雖為練法，但卻包藏了技擊的精華，這也就是﹁ 絕手亂拳皆包藏於其中﹂ 的道理。若把學習梅花樁五勢之基本變化稱為﹁ 立﹂ ，那麼本文所介紹的五勢之變化就是﹁ 破﹂ ，也就是說本文所說的五勢變化的口訣，是使梅花樁架子打破基本套路的框框，而上升到無形無態的高級階段的方法和規律。</p>
 <p class="mp_comment">五勢的變化是梅花樁架子變化的基礎，當然此外還有行步的變化，正是由於架子可以千變萬化，也能提高練功者的悟性，所以它才可以萬法歸宗、隱於無形。︼</p>
-<p id="calibre_pb_35" class="mp_end">&#160;</p>
+<p id="calibre_pb_35" class="mp_end"></p>
 </body>
 </html>
