--- a/OEBPS/Text/index_split_037.html
+++ b/OEBPS/Text/index_split_037.html
@@ -39,6 +39,6 @@
 <p class="mp_main">注解：均天教主即帝王也。言一人立極，居中治外，六合一家，故為均天教主。</p>
 <p class="mp_main">終拜東都護法</p>
 <p class="mp_main">注解：東都護法即親師也。言一生氣肇東，生我成我，恪遵王法，故曰東都護法。不可退前落後，切忌忘師背祖。然後再一願，不可犯上作亂，連累父兄。如孔子曰：如所否者，天厭之，天厭之。師立於左右邊，學徒望上叩首，如前著的拜法。</p>
-<p class="mp_end" id="calibre_pb_37">&#160;</p>
+<p class="mp_end" id="calibre_pb_37"></p>
 </body>
 </html>
