--- a/OEBPS/Text/index_split_038.html
+++ b/OEBPS/Text/index_split_038.html
@@ -23,6 +23,6 @@
 <p class="mp_main">第十條：凡傳教之師，斷不可重利輕藝。苟授匪人，敗名喪德，明有王法，暗有神鬼，可輕泄哉！孔子曰：我待價者也。價非千兩銀萬兩金，是待有尊德之君、重道之主。卑禮厚聘，方可出而仕也，如千銀萬金視若涕唾，豈足以動至聖之心哉？教者當如是耳。</p>
 <p class="mp_main">第十一條：凡入教習武之士，諒其身之強弱、人之雅俗，如講道書生只可緩授其進退之法、閃搕之術，步騎身勢而已，斷不宜拳打腳踢，與門渾者一樣看也。</p>
 <p class="mp_main">第十二條：凡拜師，於每月朔望日期，只行二拜禮，不必同君親之禮。何也，禮有隆殺，過猶不及，方免足恭之譏。切記，切記。</p>
-<p id="calibre_pb_38" class="mp_end">&#160;</p>
+<p id="calibre_pb_38" class="mp_end"></p>
 </body>
 </html>
