--- a/OEBPS/Text/index_split_039.html
+++ b/OEBPS/Text/index_split_039.html
@@ -24,6 +24,6 @@
 <p class="mp_main">或問曰：武者粗跡也，文者細事也。子言一貫，予惑滋甚。</p>
 <p class="mp_main">答曰：坐，吾明語子。聖人之心譬如明鏡止水，無徹不照。事來隨應，不先事而為之備，不後事而為之留，深合時措之宜，切契內外之道，如天之無不覆，如地之無不載。易曰：其惟聖人乎！知進退存亡而不失其正者，其惟聖人乎！孔子曰：我戰則克。夫克者無他術，唯以靜待動也，以逸待勞也，以主待客也。靜待之義即君子之道費而隱也。其大無外，其小無內，可謂費矣。然其理之所以然，則隱而不可見也。魯論曰：小不忍則亂大謀。蘇子曰：一忍可以支百勇，一靜可以致百動。聖經曰：定靜安慮。魯論曰：臨事而懼，好謀而成，子之所慎齊戰疾，善人教民七年亦可即戎矣。自古名將之統眾兵，臨大敵不動如山嶽，難測如陰陽，靜如處女，動若雷電。武經曰：致人而不致於人，卑而驕之，逸而勞之，作之而知動靜之理，角之而知有餘不足之處。用而示之不用，不用而示之用，神而明之，化而裁之，運用之妙存乎一心。總不外乎主敬之心、格物之學，故曰：一貫之道。</p>
 <p class="mp_main">豈予無根之談，而詐妄欺人也哉！</p>
-<p id="calibre_pb_39" class="mp_end">&#160;</p>
+<p id="calibre_pb_39" class="mp_end"></p>
 </body>
 </html>
