--- a/OEBPS/Text/index_split_041.html
+++ b/OEBPS/Text/index_split_041.html
@@ -22,7 +22,7 @@
 <p class="mp_main">致仕養親歸故裏，滿腹經綸誰認真。</p>
 <p class="mp_main">金鯉已化黃池隱，安貧樂道耕有莘。</p>
 <p class="mp_main">老生勤施趨庭教，公子科會定超尋。</p>
-<p class="mp_separator">&#160;</p>
-<p class="mp_end" id="calibre_pb_41">&#160;</p>
+<p class="mp_separator"></p>
+<p class="mp_end" id="calibre_pb_41"></p>
 </body>
 </html>
