--- a/OEBPS/Text/index_split_042.html
+++ b/OEBPS/Text/index_split_042.html
@@ -22,6 +22,6 @@
 <p class="mp_main">曾中壬辰探花客，名傳九州達四方。</p>
 <p class="mp_main">禦前侍衛宮爵貴，有福有壽子孫昌；</p>
 <p class="mp_main">奉旨回籍行孝道，忠孝兩全姓名揚。</p>
-<p class="mp_end" id="calibre_pb_42">&#160;</p>
+<p class="mp_end" id="calibre_pb_42"></p>
 </body>
 </html>
