--- a/OEBPS/Text/index_split_001.html
+++ b/OEBPS/Text/index_split_001.html
@@ -17,6 +17,6 @@
 <p class="mp_main">練拳之法，不外上、中、下三部，亦即上、中、下三盤也。</p>
 <p class="mp_main">頭與上肢之部謂之上，腰與胸之間渭之中，而下盤者即俗謂地盤，因其各部之不同，則練之勁路亦因而各異。上盤則以貼身靠打刁拿鎖帶等力為主，中盤則以欷懈柔化粘黏連隨之力為主，而地盤則必有以鉤掛踩蹁踢蹬撥縮之力。苟不知此，則拳之力難以上身而具神威。此拳之練法之不可不知者也。此外人雖百骸，可謂三節九段也，練習之時則必以三節九段為一體，始能全身化而為一整體之力，拳藝乃因之而精。然無步法則拳藝仍難成，因無步法猶如人之無足也，為是藝雖通則與人戰亦不能勝，此步法之不可不知也。至於氣之運用，則練藝知之最重者也。教之師乃吾輩模範也，有過而改之，有錯而勸之，導之以正軌，行之以正路，虔心領教其益非淺。而方能成德高藝精之能者，皆由良師長輩之善教而所得厚益也。</p>
 <p class="mp_main">宜敬師愛長，敬師即敬業也，此亦練拳須知之最重要者也。常舀之，藝不在多貴在精，雖有千藝不如真傳一點，練百招不如快為先，皆練拳之須知者也。</p>
-<p id="calibre_pb_1" class="mp_end">&#160;</p>
+<p id="calibre_pb_1" class="mp_end"></p>
 </body>
 </html>
