--- a/OEBPS/Text/index_split_016.html
+++ b/OEBPS/Text/index_split_016.html
@@ -12,8 +12,8 @@
   <body class="mp_body">
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_23">四時行功加減論</h1>
 <p class="mp_main">四時者春夏秋冬也。由冬至春，天之陰陰中之陽也，由春至夏，天之陽陽中之陽也，由夏至秋，天之陽陽中之陰也，由秋至冬，天之陰陰中之陰也。此為四氣也。四氣之內又分八節，即立春立夏立秋立冬春分秋分夏至冬至，此為四時八節也。四時八節氣候陰陽變化之不同，人之氣血也隨之變化不同，當春夏行功，人之氣血活躍時當漸增之，當秋冬氣血收藏之時當保持原狀。當遇到交節之時，身體如有疲勞，此換氣也。氣換神疲，神疲則身勞當減練。如久練藝不進者，此為藝疲也，當加功練之。此四時行功加減法，不可不知也。</p>
-<p class="mp_separator">&#160;</p>
+<p class="mp_separator"></p>
 <p class="mp_comment">︻評注：人的氣血在不同的季節亦有不同的活動規律。梅花樁武功鍛煉的方法和內容，也應隨著季節的不同而有所變化。在農曆節氣的前後，人的氣血活動規律常有較大的改變，練功者常感到疲勞或不適，稱此為﹁ 換氣﹂ ，﹁ 換氣﹂ 時可減練或停練；文中也指出﹁ 藝疲﹂ 之現象，藝疲時應加功練習。上述﹁ 換氣﹂ 、﹁ 藝疲﹂ 等現象至武功較高層次後即減輕或消失。︼</p>
-<p id="calibre_pb_16" class="mp_end">&#160;</p>
+<p id="calibre_pb_16" class="mp_end"></p>
 </body>
 </html>
