--- a/OEBPS/Text/index_split_024.html
+++ b/OEBPS/Text/index_split_024.html
@@ -12,8 +12,8 @@
   <body class="mp_body">
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_31">三尖到論</h1>
 <p class="mp_main">三尖到者動靜一起俱到也，不此先彼後，此速彼遲，互有牽扯而不利也。蓋氣之著人，落點雖只一尖，而摧此一尖之氣則在全體，一尖不到即有牽扯，身氣難入矣。自練不靈快，摧人不堅剛，俱坐此失。凡練形者，須刻刻留意此三處，方為合竅。</p>
-<p class="mp_separator">&#160;</p>
+<p class="mp_separator"></p>
 <p class="mp_comment">︻評注：梅花樁口訣有：﹁ 上步須要先上身，腳手齊到才為真﹂ ，三尖到也就是腳手齊到之意。無論練功或技擊，若不能腳手齊到，則此牽彼扯，此先彼後，動作散亂，落點不整。因此三尖到必須在平時練功時就養成習慣，方能一動則全身俱動，手腳合拍上下照應。︼</p>
-<p id="calibre_pb_24" class="mp_end">&#160;</p>
+<p id="calibre_pb_24" class="mp_end"></p>
 </body>
 </html>
