--- a/OEBPS/Text/index_split_033.html
+++ b/OEBPS/Text/index_split_033.html
@@ -24,8 +24,8 @@
 <p class="mp_main">勾 螃蟹合甲 連 童子拜佛</p>
 <p class="mp_main">進 蝴蝶對飛 退 狸貓捕鼠</p>
 <p class="mp_main">踏 石柱觸地 掛 鈍鐮割穀</p>
-<p class="mp_separator">&#160;</p>
+<p class="mp_separator"></p>
 <p class="mp_comment">︻評注：此24 氣各有不同的意境。梅花樁練功與技擊都要進入一定的意境，要求一定的心態。如練架子時要求無思無住，一切皆空，把自己與天地溶為一體，對周圍的一切視而不見，聽而不聞。又如上戳天下拄地，上摘星下伏虎，兩臂前後成一直線，伸向前後極遠之處，上劐下挑於天地之間劃一條鴻溝，等等。梅花樁與敵交手之時心中無我無他，如入無人之境。俗語常說：練時無人似有人，用時有人似無人，這都是對意境、心態的要求。文中二十四氣的各個意境，練者應悉心體驗領悟，必有所得。︼</p>
-<p id="calibre_pb_33" class="mp_end">&#160;</p>
+<p id="calibre_pb_33" class="mp_end"></p>
 </body>
 </html>
